[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DyFN"
version = "1.0.0"
description = "Stabilizing Streaming Video Geometry via Dynamic Feature Normalization"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "click",
    "opencv-python",
    "scipy",
    "matplotlib",
    "trimesh",
    "pillow",
    "huggingface_hub",
    "numpy",
    "torch>=2.0.0",
    "torchvision",
    "gradio",
    "utils3d @ git+https://github.com/EasternJournalist/utils3d.git"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/shawLyu/DyFN.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["DyFN*"]

[project.scripts]
DyFN = "DyFN.scripts.cli:main"